--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -56,7 +56,7 @@ a:hover {
 }
 
 .totals span{
-	padding: 40px 15px 40px 0;
+	padding: 10px 15px 40px 0;
 }
 
 .totals .action{
@@ -70,12 +70,12 @@ a:hover {
 .totals .order{
 	float: right;
 	padding: 0;
-	margin-top: 40px;
+	margin-top: 10px;
 	padding-left: 5px;
 	cursor: pointer;
 }
 
-.order a{
+.order {
 	color: #f06953;
 	font-weight: bold;
 }
