Add itemHighlighted function

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -25,6 +25,12 @@ a:hover {
 	font-weight: bold;
 }
 
+.highlightDetails {
+		margin-top: 0;
+		clear: both;
+		display: block;
+}
+
 .container {
     margin-right: auto;
     margin-left: auto;
@@ -93,7 +99,7 @@ a:hover {
 }
 
 .totals span{
-	padding: 10px 15px 40px 0;
+	padding: 10px 15px 10px 0;
 }
 
 .totals .action{
